CHATS_SIT/force-app/main/default/objects/County_User__mdt.object
<CustomObject>
<fields>
	 <fullName>Secondary_Owner__c</fullName>
    <label>Secondary Owner</label>
    <length>255</length>
    <type>Text</type>
</fields> 
<fields>
	<fullName>Primary_Owner__c</fullName>
    <label>Primary Owner</label>
    <length>255</length>
    <type>Text</type>
</fields>
<fields>
	  <fullName>County_Label__c</fullName>
    <label>County Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</fields>
<fields>
 <fullName>County_Code__c</fullName>
    <label>County Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</fields>    
<label>County User</label>
<pluralLabel>County Users</pluralLabel>
</CustomObject>